Changes between 1.2.2 and ???:
---------------

 [pulse-binding]

 * Removed `Option` wrapper around `Operation` objects, using assertion that the inner pointer is
   not null.
 * Context: Handful of methods changed to take immutable `self`. Patches were previously sent in to
   apply const to a lot of pointers in the C API, which have been accepted. Some context related
   functions were not changed simply because of an artefact relating to validation checks.
   Additional patches solving this have now been sent in. This change has been reflected here. (No
   need to worry about whether or not these are accepted, though discussion indicates they will, nor
   for a new version of PA to be released; logically they should be immutable, and we do not need to
   propagate this unfortunate artefact).
 * Assert added to block use of threaded mainloop `lock` method from within the event loop thread
   (i.e. within most instances of callback execution).
 * Stream: Renamed `proplist_remove` to `remove_proplist`
 * Stream: Common `set_event_callback` callback event names moved to submodule
 * Introspection: removed unnecessary converters.
   The `From` trait was implemented for introspection objects in both directions between the binding
   and the sys instances. While this is necessary for the sys to binding direction, the other really
   wasn't needed.
 * Subscribe: purge audoload API (deprecated since 2009)

 [pulse-sys]

 * Context: Handful of functions changed to take const pointers, as discussed above.
 * Introspect & subscribe: purge audoload API (deprecated since 2009)

Changes between 1.2.1 and 1.2.2:
---------------

 [pulse-binding]

 * Format: Restored access to `Info`'s `ptr` attribute

Changes between 1.2.0 and 1.2.1:
---------------

 [pulse-binding]

 * Stream: Fix use-after-frees with `get_format_info` and `get_context`. These should have used
   `from_raw_weak` instead of `from_raw` to avoid incorrectly freeing the underlying C object,